--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="myAppleWatch is an application designed to help Apple Watch users analyze their fitness data. myAppleWatch allows users to upload their Apple Watch data, visualize it through interactive graphs, and generate comprehensive reports."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>myAppleWatch</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
